# Boosting-with-Husky

./: CMakeLists.txt  README.md  exec.sh  machine.cfg
base/: CMakeLists.txt
core/: coordinator.hpp  objlist.hpp
examples/: CMakeLists.txt  linear_regression.cpp  linear_regression_closed_form.cpp  test.cpp  test_LogitBoost.cpp  test_SLR.cpp  test_linear_regression.cpp  testcompiling.cpp
io/input/: inputformat_base.hpp
lib/: CMakeLists.txt
mllib/: BaseEstimator.hpp  CMakeLists.txt  Classifier.hpp  DataPreprocessor.hpp  DataReader.cpp  DataReader.hpp  Estimator.hpp  Instances.hpp  LinearRegression.cpp  LinearRegression.hpp  LinearRegression_SGD.cpp  LinearRegression_SGD.hpp  LogisticRegression.cpp  LogisticRegression.hpp  LogitBoost.cpp  LogitBoost.hpp  MaxAbsScaler.cpp  MaxAbsScaler.hpp  RealAdaBoost.cpp  RealAdaBoost.hpp  SimpleLinearRegression.cpp  SimpleLinearRegression.hpp  Utility.hpp  design_pattern.txt  testcompile.cpp  testcompile.hpp  utility.hpp
